Improve height of iframe on mobile and desktop to prevent scrolling

--- a/src/pages/TicketsPage/TicketsPage.css
+++ b/src/pages/TicketsPage/TicketsPage.css
@@ -6,13 +6,18 @@
   width: 90%;
 }
 
+#ticketco-iframe {
+  margin-top: 2rem;
+  background-color: var(--black-transparent-superlight);
+  width: 100%;
+  height: 1000px;
+}
+
 @media screen and (min-width: 720px) {
   :local(.TicketsPage) {
     width: 60%;
   }
-}
-
-#ticketco-iframe {
-  margin-top: 2rem;
-  background-color: var(--black-transparent-superlight);
+  #ticketco-iframe {
+    height: 800px;
+  }
 }
